--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
           </p>
         </div>
 
+        <audio id="backgroundAudio" src="audio/mythical-museum-ambience.wav" controls preload="auto" loop></audio>
+
+
+
         <div class="grid">
           <!-- Shakōki -->
           <div class="grid-item" id="shakoki">
@@ -79,6 +83,8 @@
                       eyes. These creatures are often depicted as guardians or
                       protectors, keeping a watchful eye over their domain.
                   </p>
+        <audio id="backgroundAudio" src="audio/Goggle-eyed.mp3" controls preload="auto" loop></audio>
+
               </div>
           </div>
   
@@ -103,6 +109,8 @@
                       Shiva performing the Tandava, a cosmic dance that represents the
                       cycle of creation, preservation, and destruction.
                   </p>
+        <audio id="backgroundAudio" src="audio/Shiva.mp3" controls preload="auto" loop></audio>
+
               </div>
           </div>
   
@@ -128,6 +136,8 @@
                       for their strength, grace, and the ability to soar through the
                       skies.
                   </p>
+        <audio id="backgroundAudio" src="audio/Dragon.mp3" controls preload="auto" loop></audio>
+
               </div>
           </div>
   
@@ -153,6 +163,8 @@
                       harm. This 3D model captures the fierce and determined expression
                       of this legendary figure.
                   </p>
+        <audio id="backgroundAudio" src="audio/Shoki.mp3" controls preload="auto" loop></audio>
+
               </div>
           </div>
       </div>
@@ -321,6 +333,8 @@
         </p>
       </div>
     </div>
+
+    <button id="scrollToTopBtn" title="Go to top">&#8593;</button>
 
     <!-- Footer -->
 
